서버 목록 조회 API > 요청값 토큰으로 수정