@@ -9,6 +9,7 @@ import org.back.devsnackshop_back.dto.serververManage.response.ServerListRespons
 import org.back.devsnackshop_back.entity.*;
 import org.back.devsnackshop_back.mapper.ServerManageMapper;
 import org.back.devsnackshop_back.repository.*;
+import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -31,10 +32,10 @@ public class ServerManageService {
 
     }
 
-    public List<ServerListResponse> serverList(long userId) {
+    public List<ServerListResponse> serverList(Authentication authentication) {
         // 1. 사용자 조회 (get() 대신 orElseThrow로 예외 상황 방어)
-        UserEntity user = userRepository.findById(userId)
-                .orElseThrow(() -> new EntityNotFoundException("User not found with ID: " + userId));
+        UserEntity user = userRepository.findByEmail(authentication.getName())
+                .orElseThrow(() -> new EntityNotFoundException("User not found with Email: " + authentication.getName()));
 
         // 2. 해당 사용자의 OS 인스턴스 목록 조회
         List<UserOsInstanceEntity> userOsEntities = userOsInstanceRepository.findByUserId(user);
@@ -43,33 +44,27 @@ public class ServerManageService {
         return userOsEntities.stream()
                 .map(entity -> {
                     // 각 인스턴스에 설치된 미들웨어 목록 조회 및 DTO 변환
-                    List<ServerListResponse.MiddlewareData> mdResList = installedMiddlewareRepository.findAllByUserOsId(entity.getId())
+                    List<String> mdResList = installedMiddlewareRepository
+                            .findAllByUserOsId(entity.getId())
                             .stream()
-                            .map(this::mapToMiddlewareData) // 변환 로직 분리
-                            .collect(Collectors.toList());
+                            .map(a -> a.getMiddlewareId().getMiddlewareName()
+                                    + " "
+                                    + a.getMiddlewareId().getVersion())
+                            .toList();
+
 
                     // ServerListResponse 빌드
                     return ServerListResponse.builder()
                             .id(entity.getId())
                             .label(entity.getAlias())
-                            .cloud(entity.getCloudId().getCloudTypeName())
+                            .cloudService(entity.getCloudId().getCloudTypeName())
                             .country(entity.getCountry())
                             .ip(entity.getIpAddress())
                             .port(entity.getPortNumber())
-                            .osName(entity.getOsId().getDistroName())
-                            .osVersion(entity.getOsId().getVersion())
+                            .os(entity.getOsId().getDistroName() + " " + entity.getOsId().getVersion())
                             .middlewares(mdResList)
                             .build();
                 })
                 .collect(Collectors.toList());
-    }
-
-    // 미들웨어 데이터 매핑을 위한 헬퍼 메서드
-    private ServerListResponse.MiddlewareData mapToMiddlewareData(InstalledMiddlewareEntity md) {
-        ServerListResponse.MiddlewareData mdData = new ServerListResponse.MiddlewareData();
-        mdData.setMiddlewareType(md.getMiddlewareId().getMiddlewareType());
-        mdData.setMiddlewareName(md.getMiddlewareId().getMiddlewareName());
-        mdData.setMiddlewareVersion(md.getMiddlewareId().getVersion());
-        return mdData;
     }
 }
